--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:ui": "rm -rf build && cd ~/Full-Stack-Open-2022/part2/phonebook/ && npm run build && cp -r build ~/Full-Stack-Open-2022-part3",
     "deploy": "git push heroku HEAD:master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
-    "logs:prod": "heroku logs --tail"
+    "logs:prod": "heroku logs --tail",
+    "lint": "eslint ."
   },
   "author": "Sotiris Tilos",
   "license": "ISC",
@@ -22,6 +23,7 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "eslint": "^8.19.0",
     "nodemon": "^2.0.16"
   }
 }
